rectif Mise>mise encapsulation private